# serializer version: 1
# name: test_entities[media_player.mock_lyngdorf_main_zone-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.mock_lyngdorf_main_zone',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Main zone',
    'options': dict({
    }),
    'original_device_class': <MediaPlayerDeviceClass.RECEIVER: 'receiver'>,
    'original_icon': None,
    'original_name': 'Main zone',
    'platform': 'lyngdorf',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <MediaPlayerEntityFeature: 69004>,
    'translation_key': 'main_zone',
    'unique_id': '0050c27c76b2_main_zone',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[media_player.mock_lyngdorf_main_zone-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'receiver',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mock Lyngdorf Main zone',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <MediaPlayerEntityFeature: 69004>,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.mock_lyngdorf_main_zone',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[media_player.mock_lyngdorf_zone_b-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.mock_lyngdorf_zone_b',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <MediaPlayerDeviceClass.RECEIVER: 'receiver'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'lyngdorf',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <MediaPlayerEntityFeature: 3468>,
    'translation_key': None,
    'unique_id': '0050c27c76b2_zone_b',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[media_player.mock_lyngdorf_zone_b-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'receiver',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mock Lyngdorf Zone B',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <MediaPlayerEntityFeature: 3468>,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.mock_lyngdorf_zone_b',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_now_playing[media_player.mock_lyngdorf_main_zone-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.mock_lyngdorf_main_zone',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Main zone',
    'options': dict({
    }),
    'original_device_class': <MediaPlayerDeviceClass.RECEIVER: 'receiver'>,
    'original_icon': None,
    'original_name': 'Main zone',
    'platform': 'lyngdorf',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <MediaPlayerEntityFeature: 363967>,
    'translation_key': 'main_zone',
    'unique_id': '0050c27c76b2_main_zone',
    'unit_of_measurement': None,
  })
# ---
# name: test_now_playing[media_player.mock_lyngdorf_main_zone-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'receiver',
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/media_player_proxy/media_player.mock_lyngdorf_main_zone?token=mock_token&cache=88df577ff5b5b90f',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mock Lyngdorf Main zone',
      <MediaPlayerEntityStateAttribute.MEDIA_VOLUME_MUTED: 'is_volume_muted'>: False,
      <MediaPlayerEntityStateAttribute.MEDIA_ALBUM_NAME: 'media_album_name'>: 'Songs to Learn & Sing',
      <MediaPlayerEntityStateAttribute.MEDIA_ARTIST: 'media_artist'>: 'Echo & the Bunnymen',
      <MediaPlayerEntityStateAttribute.MEDIA_CONTENT_TYPE: 'media_content_type'>: <MediaType.MUSIC: 'music'>,
      <MediaPlayerEntityStateAttribute.MEDIA_DURATION: 'media_duration'>: 346,
      <MediaPlayerEntityStateAttribute.MEDIA_POSITION: 'media_position'>: 319,
      <MediaPlayerEntityStateAttribute.MEDIA_POSITION_UPDATED_AT: 'media_position_updated_at'>: datetime.datetime(2026, 8, 17, 13, 0, tzinfo=datetime.timezone.utc),
      <MediaPlayerEntityStateAttribute.MEDIA_TITLE: 'media_title'>: 'The Killing Moon',
      <MediaPlayerEntityStateAttribute.MEDIA_REPEAT: 'repeat'>: <RepeatMode.OFF: 'off'>,
      <MediaPlayerEntityStateAttribute.MEDIA_SHUFFLE: 'shuffle'>: False,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <MediaPlayerEntityFeature: 363967>,
      <MediaPlayerEntityStateAttribute.MEDIA_VOLUME_LEVEL: 'volume_level'>: 0.48345439870863605,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.mock_lyngdorf_main_zone',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'playing',
  })
# ---
# name: test_now_playing[media_player.mock_lyngdorf_zone_b-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.mock_lyngdorf_zone_b',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <MediaPlayerDeviceClass.RECEIVER: 'receiver'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'lyngdorf',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <MediaPlayerEntityFeature: 3468>,
    'translation_key': None,
    'unique_id': '0050c27c76b2_zone_b',
    'unit_of_measurement': None,
  })
# ---
# name: test_now_playing[media_player.mock_lyngdorf_zone_b-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'receiver',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mock Lyngdorf Zone B',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <MediaPlayerEntityFeature: 3468>,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.mock_lyngdorf_zone_b',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
